Fix nav transitions by replacing display toggle property with visibility property

--- a/style.css
+++ b/style.css
@@ -67,11 +67,11 @@ nav {
   height: calc(100vh - 7rem);
   overflow: hidden;
 
-  display: none;
+  visibility: hidden;
 }
 
 nav.active {
-  display: flex;
+  visibility: visible;
 }
 
 nav img {
